--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,14 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# TexTemp file
+*.aux
+*.bbl
+*.blg
+*.out
+*.gz
+*.pdf
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
